[package]
name = "kcnmonitoring"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
tokio-cron-scheduler = "0.15"
chrono = { version = "0.4", features = ["clock"] }
env_logger = "0.11"
log = "0.4"
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = {version = "0.12", features = ["json", "rustls-tls"]}
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"

